# morning-agents

./: .env.example  .gitignore  404.html  CLAUDE.md  LICENSE  README.md  SCRIPT_LOCAL.md  index.html  local-readme.md  mkdocs.yml  pyproject.toml  spike_test.py
.github/workflows/: docs.yml
adding-agents/: index.html
agents/: index.html
architecture/: index.html
cli/: index.html
contracts/: index.html
dashboard/: index.html  package.json  tsconfig.node.json  vite-plugin-runs.ts  vite.config.ts
dashboard/src/: api.ts  index.css  router.tsx  schemas.ts  utils.ts
docs/: adding-agents.md  agents.md  architecture.md  cli.md  contracts.md  index.md  quickstart.md  skills.md
evals/: judge.py  mocks.py  regression.py  spike_test.py  test_brewmaster.py  test_cross_reference.py  test_dag_executor.py  test_devenv.py  test_golden_brewmaster.py  test_golden_cross_ref.py  test_golden_devenv.py  test_golden_pr_queue.py  test_homebrew_mcp.py  test_orchestrator.py  test_persistence.py  test_pr_queue.py  test_regression.py  test_time_context.py
mcp-servers/: package.json  tsconfig.json
mcp-servers/devenv-mcp/: index.ts
mcp-servers/homebrew-mcp/: index.ts
mcp-servers/spike/: index.ts
morning_agents/: cli.py  config.py  orchestrator.py  persistence.py  run_brewmaster.py
morning_agents/agents/: base.py  brewmaster.py  cross_ref.py  devenv.py  pr_queue.py
morning_agents/contracts/: models.py
morning_agents/orchestrator/: __init__.py  dag_executor.py  orchestrator.py  resources.py  (+1 more)
quickstart/: index.html
search/: search_index.json
skills/: index.html
(+25 files in other folders)
